Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANY

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     command -> CMD DIRECT
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> empty eoe
Rule 6     statement -> variable eoe
Rule 7     statement -> assignment eoe
Rule 8     statement -> from eoe
Rule 9     statement -> if eoe
Rule 10    statement -> function eoe
Rule 11    statement -> function_call eoe
Rule 12    statement -> command eoe
Rule 13    eoe -> NEWLINE
Rule 14    eoe -> SEMICOLON
Rule 15    eoe -> SEMICOLON NEWLINE
Rule 16    empty -> <empty>
Rule 17    assignment -> variable ASSIGNMENT expression
Rule 18    variable -> NAME index
Rule 19    variable -> NAME LBRACKET index RBRACKET
Rule 20    index -> <empty>
Rule 21    index -> index COMMA INT
Rule 22    index -> INT
Rule 23    expression -> variable
Rule 24    expression -> const
Rule 25    expression -> operation
Rule 26    expression -> logic_expr
Rule 27    expression -> function_call
Rule 28    const -> INT
Rule 29    const -> FLOAT
Rule 30    const -> BOOL
Rule 31    const -> CELLTYPE
Rule 32    operation -> expression PLUS expression
Rule 33    operation -> expression MINUS expression
Rule 34    operation -> MINUS expression
Rule 35    from -> FROM expression TO expression DO FUNCTION NEWLINE statements END
Rule 36    from -> FROM expression TO expression function_call
Rule 37    from -> FROM expression TO expression WITH STEP expression DO FUNCTION NEWLINE statements END
Rule 38    from -> FROM expression TO expression WITH STEP expression function_call
Rule 39    function_call -> DO NAME
Rule 40    if -> IF logic_expr function_call
Rule 41    if -> IF logic_expr DO FUNCTION NEWLINE statements END
Rule 42    logic_expr -> expression AND expression
Rule 43    logic_expr -> expression OR expression
Rule 44    logic_expr -> expression CMP expression
Rule 45    function -> FUNCTION NAME NEWLINE statements END
Rule 46    assignment -> variable ASSIGNMENT error
Rule 47    from -> FROM expression TO expression WITH STEP expression DO FUNCTION error statements END
Rule 48    from -> FROM expression TO expression DO FUNCTION error statements END
Rule 49    from -> FROM expression error expression WITH STEP expression DO FUNCTION NEWLINE statements END
Rule 50    from -> FROM expression error expression DO FUNCTION NEWLINE statements END
Rule 51    from -> FROM expression TO expression WITH STEP expression DO error NEWLINE statements END
Rule 52    from -> FROM expression TO expression DO error NEWLINE statements END
Rule 53    from -> FROM expression TO expression error FUNCTION NEWLINE statements END
Rule 54    from -> FROM expression TO expression WITH STEP expression error FUNCTION NEWLINE statements END
Rule 55    if -> IF logic_expr DO FUNCTION error statements END
Rule 56    if -> IF logic_expr DO error NEWLINE statements END
Rule 57    if -> IF error DO FUNCTION NEWLINE statements END
Rule 58    if -> IF error function_call
Rule 59    if -> IF logic_expr error FUNCTION NEWLINE statements END
Rule 60    function -> FUNCTION NAME error statements END
Rule 61    function -> error NAME NEWLINE statements END

Terminals, with rules where they appear

AND                  : 42
ANY                  : 
ASSIGNMENT           : 17 46
BOOL                 : 30
CELLTYPE             : 31
CMD                  : 2
CMP                  : 44
COMMA                : 21
DIRECT               : 2
DO                   : 35 37 39 41 47 48 49 50 51 52 55 56 57
END                  : 35 37 41 45 47 48 49 50 51 52 53 54 55 56 57 59 60 61
FLOAT                : 29
FROM                 : 35 36 37 38 47 48 49 50 51 52 53 54
FUNCTION             : 35 37 41 45 47 48 49 50 53 54 55 57 59 60
IF                   : 40 41 55 56 57 58 59
INT                  : 21 22 28
LBRACKET             : 19
MINUS                : 33 34
NAME                 : 18 19 39 45 60 61
NEWLINE              : 13 15 35 37 41 45 49 50 51 52 53 54 56 57 59 61
OR                   : 43
PLUS                 : 32
RBRACKET             : 19
SEMICOLON            : 14 15
STEP                 : 37 38 47 49 51 54
TO                   : 35 36 37 38 47 48 51 52 53 54
WITH                 : 37 38 47 49 51 54
error                : 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61

Nonterminals, with rules where they appear

assignment           : 7
command              : 12
const                : 24
empty                : 5
eoe                  : 5 6 7 8 9 10 11 12
expression           : 17 32 32 33 33 34 35 35 36 36 37 37 37 38 38 38 42 42 43 43 44 44 47 47 47 48 48 49 49 49 50 50 51 51 51 52 52 53 53 54 54 54
from                 : 8
function             : 10
function_call        : 11 27 36 38 40 58
if                   : 9
index                : 18 19 21
logic_expr           : 26 40 41 55 56 59
operation            : 25
program              : 0
statement            : 3 4
statements           : 1 3 35 37 41 45 47 48 49 50 51 52 53 54 55 56 57 59 60 61
variable             : 6 17 23 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . empty eoe
    (6) statement -> . variable eoe
    (7) statement -> . assignment eoe
    (8) statement -> . from eoe
    (9) statement -> . if eoe
    (10) statement -> . function eoe
    (11) statement -> . function_call eoe
    (12) statement -> . command eoe
    (16) empty -> .
    (18) variable -> . NAME index
    (19) variable -> . NAME LBRACKET index RBRACKET
    (17) assignment -> . variable ASSIGNMENT expression
    (46) assignment -> . variable ASSIGNMENT error
    (35) from -> . FROM expression TO expression DO FUNCTION NEWLINE statements END
    (36) from -> . FROM expression TO expression function_call
    (37) from -> . FROM expression TO expression WITH STEP expression DO FUNCTION NEWLINE statements END
    (38) from -> . FROM expression TO expression WITH STEP expression function_call
    (47) from -> . FROM expression TO expression WITH STEP expression DO FUNCTION error statements END
    (48) from -> . FROM expression TO expression DO FUNCTION error statements END
    (49) from -> . FROM expression error expression WITH STEP expression DO FUNCTION NEWLINE statements END
    (50) from -> . FROM expression error expression DO FUNCTION NEWLINE statements END
    (51) from -> . FROM expression TO expression WITH STEP expression DO error NEWLINE statements END
    (52) from -> . FROM expression TO expression DO error NEWLINE statements END
    (53) from -> . FROM expression TO expression error FUNCTION NEWLINE statements END
    (54) from -> . FROM expression TO expression WITH STEP expression error FUNCTION NEWLINE statements END
    (40) if -> . IF logic_expr function_call
    (41) if -> . IF logic_expr DO FUNCTION NEWLINE statements END
    (55) if -> . IF logic_expr DO FUNCTION error statements END
    (56) if -> . IF logic_expr DO error NEWLINE statements END
    (57) if -> . IF error DO FUNCTION NEWLINE statements END
    (58) if -> . IF error function_call
    (59) if -> . IF logic_expr error FUNCTION NEWLINE statements END
    (45) function -> . FUNCTION NAME NEWLINE statements END
    (60) function -> . FUNCTION NAME error statements END
    (61) function -> . error NAME NEWLINE statements END
    (39) function_call -> . DO NAME
    (2) command -> . CMD DIRECT

    NEWLINE         reduce using rule 16 (empty -> .)
    SEMICOLON       reduce using rule 16 (empty -> .)
    NAME            shift and go to state 12
    FROM            shift and go to state 14
    IF              shift and go to state 17
    FUNCTION        shift and go to state 16
    error           shift and go to state 13
    DO              shift and go to state 15
    CMD             shift and go to state 18

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    variable                       shift and go to state 5
    assignment                     shift and go to state 6
    from                           shift and go to state 7
    if                             shift and go to state 8
    function                       shift and go to state 9
    function_call                  shift and go to state 10
    command                        shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (5) statement -> . empty eoe
    (6) statement -> . variable eoe
    (7) statement -> . assignment eoe
    (8) statement -> . from eoe
    (9) statement -> . if eoe
    (10) statement -> . function eoe
    (11) statement -> . function_call eoe
    (12) statement -> . command eoe
    (16) empty -> .
    (18) variable -> . NAME index
    (19) variable -> . NAME LBRACKET index RBRACKET
    (17) assignment -> . variable ASSIGNMENT expression
    (46) assignment -> . variable ASSIGNMENT error
    (35) from -> . FROM expression TO expression DO FUNCTION NEWLINE statements END
    (36) from -> . FROM expression TO expression function_call
    (37) from -> . FROM expression TO expression WITH STEP expression DO FUNCTION NEWLINE statements END
    (38) from -> . FROM expression TO expression WITH STEP expression function_call
    (47) from -> . FROM expression TO expression WITH STEP expression DO FUNCTION error statements END
    (48) from -> . FROM expression TO expression DO FUNCTION error statements END
    (49) from -> . FROM expression error expression WITH STEP expression DO FUNCTION NEWLINE statements END
    (50) from -> . FROM expression error expression DO FUNCTION NEWLINE statements END
    (51) from -> . FROM expression TO expression WITH STEP expression DO error NEWLINE statements END
    (52) from -> . FROM expression TO expression DO error NEWLINE statements END
    (53) from -> . FROM expression TO expression error FUNCTION NEWLINE statements END
    (54) from -> . FROM expression TO expression WITH STEP expression error FUNCTION NEWLINE statements END
    (40) if -> . IF logic_expr function_call
    (41) if -> . IF logic_expr DO FUNCTION NEWLINE statements END
    (55) if -> . IF logic_expr DO FUNCTION error statements END
    (56) if -> . IF logic_expr DO error NEWLINE statements END
    (57) if -> . IF error DO FUNCTION NEWLINE statements END
    (58) if -> . IF error function_call
    (59) if -> . IF logic_expr error FUNCTION NEWLINE statements END
    (45) function -> . FUNCTION NAME NEWLINE statements END
    (60) function -> . FUNCTION NAME error statements END
    (61) function -> . error NAME NEWLINE statements END
    (39) function_call -> . DO NAME
    (2) command -> . CMD DIRECT

    $end            reduce using rule 1 (program -> statements .)
    NEWLINE         reduce using rule 16 (empty -> .)
    SEMICOLON       reduce using rule 16 (empty -> .)
    NAME            shift and go to state 12
    FROM            shift and go to state 14
    IF              shift and go to state 17
    FUNCTION        shift and go to state 16
    error           shift and go to state 13
    DO              shift and go to state 15
    CMD             shift and go to state 18

    statement                      shift and go to state 19
    empty                          shift and go to state 4
    variable                       shift and go to state 5
    assignment                     shift and go to state 6
    from                           shift and go to state 7
    if                             shift and go to state 8
    function                       shift and go to state 9
    function_call                  shift and go to state 10
    command                        shift and go to state 11

state 3

    (4) statements -> statement .

    NAME            reduce using rule 4 (statements -> statement .)
    FROM            reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    FUNCTION        reduce using rule 4 (statements -> statement .)
    error           reduce using rule 4 (statements -> statement .)
    DO              reduce using rule 4 (statements -> statement .)
    CMD             reduce using rule 4 (statements -> statement .)
    NEWLINE         reduce using rule 4 (statements -> statement .)
    SEMICOLON       reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    END             reduce using rule 4 (statements -> statement .)


state 4

    (5) statement -> empty . eoe
    (13) eoe -> . NEWLINE
    (14) eoe -> . SEMICOLON
    (15) eoe -> . SEMICOLON NEWLINE

    NEWLINE         shift and go to state 21
    SEMICOLON       shift and go to state 22

    eoe                            shift and go to state 20

state 5

    (6) statement -> variable . eoe
    (17) assignment -> variable . ASSIGNMENT expression
    (46) assignment -> variable . ASSIGNMENT error
    (13) eoe -> . NEWLINE
    (14) eoe -> . SEMICOLON
    (15) eoe -> . SEMICOLON NEWLINE

    ASSIGNMENT      shift and go to state 24
    NEWLINE         shift and go to state 21
    SEMICOLON       shift and go to state 22

    eoe                            shift and go to state 23

state 6

    (7) statement -> assignment . eoe
    (13) eoe -> . NEWLINE
    (14) eoe -> . SEMICOLON
    (15) eoe -> . SEMICOLON NEWLINE

    NEWLINE         shift and go to state 21
    SEMICOLON       shift and go to state 22

    eoe                            shift and go to state 25

state 7

    (8) statement -> from . eoe
    (13) eoe -> . NEWLINE
    (14) eoe -> . SEMICOLON
    (15) eoe -> . SEMICOLON NEWLINE

    NEWLINE         shift and go to state 21
    SEMICOLON       shift and go to state 22

    eoe                            shift and go to state 26

state 8

    (9) statement -> if . eoe
    (13) eoe -> . NEWLINE
    (14) eoe -> . SEMICOLON
    (15) eoe -> . SEMICOLON NEWLINE

    NEWLINE         shift and go to state 21
    SEMICOLON       shift and go to state 22

    eoe                            shift and go to state 27

state 9

    (10) statement -> function . eoe
    (13) eoe -> . NEWLINE
    (14) eoe -> . SEMICOLON
    (15) eoe -> . SEMICOLON NEWLINE

    NEWLINE         shift and go to state 21
    SEMICOLON       shift and go to state 22

    eoe                            shift and go to state 28

state 10

    (11) statement -> function_call . eoe
    (13) eoe -> . NEWLINE
    (14) eoe -> . SEMICOLON
    (15) eoe -> . SEMICOLON NEWLINE

    NEWLINE         shift and go to state 21
    SEMICOLON       shift and go to state 22

    eoe                            shift and go to state 29

state 11

    (12) statement -> command . eoe
    (13) eoe -> . NEWLINE
    (14) eoe -> . SEMICOLON
    (15) eoe -> . SEMICOLON NEWLINE

    NEWLINE         shift and go to state 21
    SEMICOLON       shift and go to state 22

    eoe                            shift and go to state 30

state 12

    (18) variable -> NAME . index
    (19) variable -> NAME . LBRACKET index RBRACKET
    (20) index -> .
    (21) index -> . index COMMA INT
    (22) index -> . INT

    LBRACKET        shift and go to state 32
    COMMA           reduce using rule 20 (index -> .)
    ASSIGNMENT      reduce using rule 20 (index -> .)
    NEWLINE         reduce using rule 20 (index -> .)
    SEMICOLON       reduce using rule 20 (index -> .)
    TO              reduce using rule 20 (index -> .)
    error           reduce using rule 20 (index -> .)
    PLUS            reduce using rule 20 (index -> .)
    MINUS           reduce using rule 20 (index -> .)
    AND             reduce using rule 20 (index -> .)
    OR              reduce using rule 20 (index -> .)
    CMP             reduce using rule 20 (index -> .)
    DO              reduce using rule 20 (index -> .)
    WITH            reduce using rule 20 (index -> .)
    INT             shift and go to state 33

    index                          shift and go to state 31

state 13

    (61) function -> error . NAME NEWLINE statements END

    NAME            shift and go to state 34


state 14

    (35) from -> FROM . expression TO expression DO FUNCTION NEWLINE statements END
    (36) from -> FROM . expression TO expression function_call
    (37) from -> FROM . expression TO expression WITH STEP expression DO FUNCTION NEWLINE statements END
    (38) from -> FROM . expression TO expression WITH STEP expression function_call
    (47) from -> FROM . expression TO expression WITH STEP expression DO FUNCTION error statements END
    (48) from -> FROM . expression TO expression DO FUNCTION error statements END
    (49) from -> FROM . expression error expression WITH STEP expression DO FUNCTION NEWLINE statements END
    (50) from -> FROM . expression error expression DO FUNCTION NEWLINE statements END
    (51) from -> FROM . expression TO expression WITH STEP expression DO error NEWLINE statements END
    (52) from -> FROM . expression TO expression DO error NEWLINE statements END
    (53) from -> FROM . expression TO expression error FUNCTION NEWLINE statements END
    (54) from -> FROM . expression TO expression WITH STEP expression error FUNCTION NEWLINE statements END
    (23) expression -> . variable
    (24) expression -> . const
    (25) expression -> . operation
    (26) expression -> . logic_expr
    (27) expression -> . function_call
    (18) variable -> . NAME index
    (19) variable -> . NAME LBRACKET index RBRACKET
    (28) const -> . INT
    (29) const -> . FLOAT
    (30) const -> . BOOL
    (31) const -> . CELLTYPE
    (32) operation -> . expression PLUS expression
    (33) operation -> . expression MINUS expression
    (34) operation -> . MINUS expression
    (42) logic_expr -> . expression AND expression
    (43) logic_expr -> . expression OR expression
    (44) logic_expr -> . expression CMP expression
    (39) function_call -> . DO NAME

    NAME            shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    BOOL            shift and go to state 43
    CELLTYPE        shift and go to state 44
    MINUS           shift and go to state 45
    DO              shift and go to state 15

    expression                     shift and go to state 35
    function_call                  shift and go to state 36
    variable                       shift and go to state 37
    const                          shift and go to state 38
    operation                      shift and go to state 39
    logic_expr                     shift and go to state 40

state 15

    (39) function_call -> DO . NAME

    NAME            shift and go to state 46


state 16

    (45) function -> FUNCTION . NAME NEWLINE statements END
    (60) function -> FUNCTION . NAME error statements END

    NAME            shift and go to state 47


state 17

    (40) if -> IF . logic_expr function_call
    (41) if -> IF . logic_expr DO FUNCTION NEWLINE statements END
    (55) if -> IF . logic_expr DO FUNCTION error statements END
    (56) if -> IF . logic_expr DO error NEWLINE statements END
    (57) if -> IF . error DO FUNCTION NEWLINE statements END
    (58) if -> IF . error function_call
    (59) if -> IF . logic_expr error FUNCTION NEWLINE statements END
    (42) logic_expr -> . expression AND expression
    (43) logic_expr -> . expression OR expression
    (44) logic_expr -> . expression CMP expression
    (23) expression -> . variable
    (24) expression -> . const
    (25) expression -> . operation
    (26) expression -> . logic_expr
    (27) expression -> . function_call
    (18) variable -> . NAME index
    (19) variable -> . NAME LBRACKET index RBRACKET
    (28) const -> . INT
    (29) const -> . FLOAT
    (30) const -> . BOOL
    (31) const -> . CELLTYPE
    (32) operation -> . expression PLUS expression
    (33) operation -> . expression MINUS expression
    (34) operation -> . MINUS expression
    (39) function_call -> . DO NAME

    error           shift and go to state 49
    NAME            shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    BOOL            shift and go to state 43
    CELLTYPE        shift and go to state 44
    MINUS           shift and go to state 45
    DO              shift and go to state 15

    logic_expr                     shift and go to state 48
    function_call                  shift and go to state 36
    expression                     shift and go to state 50
    variable                       shift and go to state 37
    const                          shift and go to state 38
    operation                      shift and go to state 39

state 18

    (2) command -> CMD . DIRECT

    DIRECT          shift and go to state 51


state 19

    (3) statements -> statements statement .

    NAME            reduce using rule 3 (statements -> statements statement .)
    FROM            reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    FUNCTION        reduce using rule 3 (statements -> statements statement .)
    error           reduce using rule 3 (statements -> statements statement .)
    DO              reduce using rule 3 (statements -> statements statement .)
    CMD             reduce using rule 3 (statements -> statements statement .)
    NEWLINE         reduce using rule 3 (statements -> statements statement .)
    SEMICOLON       reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    END             reduce using rule 3 (statements -> statements statement .)


state 20

    (5) statement -> empty eoe .

    NAME            reduce using rule 5 (statement -> empty eoe .)
    FROM            reduce using rule 5 (statement -> empty eoe .)
    IF              reduce using rule 5 (statement -> empty eoe .)
    FUNCTION        reduce using rule 5 (statement -> empty eoe .)
    error           reduce using rule 5 (statement -> empty eoe .)
    DO              reduce using rule 5 (statement -> empty eoe .)
    CMD             reduce using rule 5 (statement -> empty eoe .)
    NEWLINE         reduce using rule 5 (statement -> empty eoe .)
    SEMICOLON       reduce using rule 5 (statement -> empty eoe .)
    $end            reduce using rule 5 (statement -> empty eoe .)
    END             reduce using rule 5 (statement -> empty eoe .)


state 21

    (13) eoe -> NEWLINE .

    NAME            reduce using rule 13 (eoe -> NEWLINE .)
    FROM            reduce using rule 13 (eoe -> NEWLINE .)
    IF              reduce using rule 13 (eoe -> NEWLINE .)
    FUNCTION        reduce using rule 13 (eoe -> NEWLINE .)
    error           reduce using rule 13 (eoe -> NEWLINE .)
    DO              reduce using rule 13 (eoe -> NEWLINE .)
    CMD             reduce using rule 13 (eoe -> NEWLINE .)
    NEWLINE         reduce using rule 13 (eoe -> NEWLINE .)
    SEMICOLON       reduce using rule 13 (eoe -> NEWLINE .)
    $end            reduce using rule 13 (eoe -> NEWLINE .)
    END             reduce using rule 13 (eoe -> NEWLINE .)


state 22

    (14) eoe -> SEMICOLON .
    (15) eoe -> SEMICOLON . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    NAME            reduce using rule 14 (eoe -> SEMICOLON .)
    FROM            reduce using rule 14 (eoe -> SEMICOLON .)
    IF              reduce using rule 14 (eoe -> SEMICOLON .)
    FUNCTION        reduce using rule 14 (eoe -> SEMICOLON .)
    error           reduce using rule 14 (eoe -> SEMICOLON .)
    DO              reduce using rule 14 (eoe -> SEMICOLON .)
    CMD             reduce using rule 14 (eoe -> SEMICOLON .)
    SEMICOLON       reduce using rule 14 (eoe -> SEMICOLON .)
    $end            reduce using rule 14 (eoe -> SEMICOLON .)
    END             reduce using rule 14 (eoe -> SEMICOLON .)
    NEWLINE         shift and go to state 52

  ! NEWLINE         [ reduce using rule 14 (eoe -> SEMICOLON .) ]


state 23

    (6) statement -> variable eoe .

    NAME            reduce using rule 6 (statement -> variable eoe .)
    FROM            reduce using rule 6 (statement -> variable eoe .)
    IF              reduce using rule 6 (statement -> variable eoe .)
    FUNCTION        reduce using rule 6 (statement -> variable eoe .)
    error           reduce using rule 6 (statement -> variable eoe .)
    DO              reduce using rule 6 (statement -> variable eoe .)
    CMD             reduce using rule 6 (statement -> variable eoe .)
    NEWLINE         reduce using rule 6 (statement -> variable eoe .)
    SEMICOLON       reduce using rule 6 (statement -> variable eoe .)
    $end            reduce using rule 6 (statement -> variable eoe .)
    END             reduce using rule 6 (statement -> variable eoe .)


state 24

    (17) assignment -> variable ASSIGNMENT . expression
    (46) assignment -> variable ASSIGNMENT . error
    (23) expression -> . variable
    (24) expression -> . const
    (25) expression -> . operation
    (26) expression -> . logic_expr
    (27) expression -> . function_call
    (18) variable -> . NAME index
    (19) variable -> . NAME LBRACKET index RBRACKET
    (28) const -> . INT
    (29) const -> . FLOAT
    (30) const -> . BOOL
    (31) const -> . CELLTYPE
    (32) operation -> . expression PLUS expression
    (33) operation -> . expression MINUS expression
    (34) operation -> . MINUS expression
    (42) logic_expr -> . expression AND expression
    (43) logic_expr -> . expression OR expression
    (44) logic_expr -> . expression CMP expression
    (39) function_call -> . DO NAME

    error           shift and go to state 54
    NAME            shift and go to state 12
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    BOOL            shift and go to state 43
    CELLTYPE        shift and go to state 44
    MINUS           shift and go to state 45
    DO              shift and go to state 15

    variable                       shift and go to state 37
    expression                     shift and go to state 53
    const                          shift and go to state 38
    operation                      shift and go to state 39
    logic_expr                     shift and go to state 40
    function_call                  shift and go to state 36

state 25

    (7) statement -> assignment eoe .

    NAME            reduce using rule 7 (statement -> assignment eoe .)
    FROM            reduce using rule 7 (statement -> assignment eoe .)
    IF              reduce using rule 7 (statement -> assignment eoe .)
    FUNCTION        reduce using rule 7 (statement -> assignment eoe .)
    error           reduce using rule 7 (statement -> assignment eoe .)
    DO              reduce using rule 7 (statement -> assignment eoe .)
    CMD             reduce using rule 7 (statement -> assignment eoe .)
    NEWLINE         reduce using rule 7 (statement -> assignment eoe .)
    SEMICOLON       reduce using rule 7 (statement -> assignment eoe .)
    $end            reduce using rule 7 (statement -> assignment eoe .)
    END             reduce using rule 7 (statement -> assignment eoe .)


state 26

    (8) statement -> from eoe .
